added more header links

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     />
 </head>
 <body class="text-color-white bg-green-700 tracking-wider">
-   <header>
-    <nav class="container flex justify-between items-center">
+   <header class="w-full h-[80px] bg-color-primary-light">
+    <nav class="container w-full h-[80px] bg-color-primary-light flex justify-between items-center">
         <div class="w-20 py-5 text text-color-secondary font-bold text-3xl">
             <a href="#home">
                 <span class="text-color-white">NA</span>IMS
@@ -27,10 +27,13 @@
         <div>
             <ul class="hidden lg:flex items-center space-x-6">
                 <li><a href="#home" class="hover:text-color-secondary ease-in duration-200">Home</a></li>
-                <li><a href="#contact" class="hover:text-color-secondary ease-in duration-200">Contact Us</a></li>
                 <li><a href="#about-us" class="hover:text-color-secondary ease-in duration-200">About Us</a></li>
-                <li><a href="#news" class="hover:text-color-secondary ease-in duration-200">News</a></li>
-                <li><a href="#purpose" class="hover:text-color-secondary ease-in duration-200">Purpose</a></li>
+                <li><a href="#contact" class="hover:text-color-secondary ease-in duration-200">Contact Us</a></li>
+                <li><a href="#statistics" class="hover:text-color-secondary ease-in duration-200">Statistics</a></li>
+                <li><a href="#publications" class="hover:text-color-secondary ease-in duration-200">Publications</a></li>
+                <li><a href="#gallery" class="hover:text-color-secondary ease-in duration-200">Gallery</a></li>
+                <li><a href="#events" class="hover:text-color-secondary ease-in duration-200">Events</a></li>
+                <li><a href="#login" class="hover:text-color-secondary ease-in duration-200">Login</a></li>
                 <li>
                     <button class="bg-color-secondary px-9 py-3 rounded-md capitalize font-bold hover:opacity-80 ease-in duration-200">Connect to NAIMS</button>
                 </li>
