control the cards

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
         style="background-color: rgba(0, 0, 0, 0.6)">
         <div class="flex  flex-col lg:flex-row h-full lg:py-0 lg:px-0 py-20 px-10  items-center justify-center mx-auto  lg:w-[80%] w-full">
             <!-- card -->
-            <div class="border-2 pr-11 border-solid z-20 lg:w-[50%] w-full lg:-mt-[100px] mt-10 border-r-0 shadow-lg border-t-color-primary border-t-8 border-l-color-primary border-l-8 border-b-0  bg-[rgba(0,0,0,0.5)] text-center py-20 px-5 rounded-2xl cursor-pointer hover:bg-[rgba(0,0,0,0.7)] ease-in duration-200">
+            <div class="border-2 pr-11 border-solid z-20 lg:w-[50%] w-full lg:-mt-[100px] sm:mt-[60px] mt-10 border-r-0 shadow-lg border-t-color-primary border-t-8 border-l-color-primary border-l-8 border-b-0  bg-[rgba(0,0,0,0.5)] text-center py-20 px-5 rounded-2xl cursor-pointer hover:bg-[rgba(0,0,0,0.7)] ease-in duration-200">
                 <h3 class="text-xl font-bold py-4 text-color-primary">Goals of NAIMS</h3>
                 <p class="leading-relaxed">
                     NAIMS contributes to the sustainability of Nigeria's agricultural landscape. By promoting efficient resource utilization, reducing wastage, and optimizing production, it supports long-term sustainability goals.
@@ -103,7 +103,7 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
                 </p>
             </div>  
             <!-- card -->
-            <div class="border-2 border-solid z-10 pl-11 px-5 lg:w-[50%] w-full lg:mt-[200px] mt-5 border-l-0 lg:-ml-[50px] ml-0 shadow-lg border-r-color-primary  border-r-8 border-t-0 border-b-color-primary border-b-8  bg-[rgba(0,0,0,0.5)] text-center py-20 rounded-2xl cursor-pointer hover:bg-[rgba(0,0,0,0.7)] ease-in duration-200">
+            <div class="border-2 border-solid z-10 pl-11 px-5 lg:w-[50%] w-full lg:mt-[200px] sm:mt-[150px] lg:mb-0 md:mb-0 sm:mb-10 mt-5 border-l-0 lg:-ml-[50px] ml-0 shadow-lg border-r-color-primary  border-r-8 border-t-0 border-b-color-primary border-b-8  bg-[rgba(0,0,0,0.5)] text-center py-20 rounded-2xl cursor-pointer hover:bg-[rgba(0,0,0,0.7)] ease-in duration-200">
                 <h3 class="text-xl font-bold py-4 text-color-primary">Aim of NAIMS</h3>
                 <p class="leading-relaxed">
                     NAIMS aims to centralize agricultural data from various sources, including farms, research institutions, and government agencies. This centralized data repository facilitates efficient data management and analysis.
