hero padding top

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
         style="background-color: rgba(0, 0, 0, 0.6)">
         <div class="flex  flex-col lg:flex-row h-full lg:py-0 lg:px-0 py-20 px-10  items-center justify-center mx-auto  lg:w-[80%] w-full">
             <!-- card -->
-            <div class="border-2 pr-11 border-solid z-20 lg:w-[50%] w-full lg:-mt-[100px] sm:mt-[60px] mt-10 border-r-0 shadow-lg border-t-color-primary border-t-8 border-l-color-primary border-l-8 border-b-0  bg-[rgba(0,0,0,0.5)] text-center py-20 px-5 rounded-2xl cursor-pointer hover:bg-[rgba(0,0,0,0.7)] ease-in duration-200">
+            <div class="border-2 pr-11 border-solid z-20 lg:w-[50%] w-full lg:-mt-[100px] sm:mt-[150px] mt-[130px] border-r-0 shadow-lg border-t-color-primary border-t-8 border-l-color-primary border-l-8 border-b-0  bg-[rgba(0,0,0,0.5)] text-center py-20 px-5 rounded-2xl cursor-pointer hover:bg-[rgba(0,0,0,0.7)] ease-in duration-200">
                 <h3 class="text-xl font-bold py-4 text-color-primary">Goals of NAIMS</h3>
                 <p class="leading-relaxed">
                     NAIMS contributes to the sustainability of Nigeria's agricultural landscape. By promoting efficient resource utilization, reducing wastage, and optimizing production, it supports long-term sustainability goals.
@@ -172,134 +172,133 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
             <p class="text-white font-medium text-xl text-left">With NAIMS, you can access the latest trends, make informed decisions, and contribute to the growth and sustainability of Nigeria's vibrant agricultural sector.</p>
         </div>
         <div class="flex  flex-col lg:flex-row h-full -mt-[120px] lg:px-0  px-10  items-center justify-center mx-auto  lg:w-[80%] w-full">
-            <div class="grid lg:grid-cols-3 grid-cols-1 gap-6">
-                <div class="col-span-2">
-                    <div class="carousel-container">
-                        <div class="carousel-slide">
-                          <img src="img/guine_corn.jpg" class="w-full rounded-lg h-full" alt="Slide 1">
-                        </div>
-                        <div class="carousel-slide">
-                          <img src="img/pig.jpg" class="w-full h-full rounded-lg" alt="Slide 2">
-                        </div>
-                        <div class="carousel-slide">
-                          <img src="img/maize.jpg" class="w-full h-full rounded-lg" alt="Slide 3">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-span-1">    
-                <div class='w-full col-span-1 relative lg:h-[75vh] h-[50vh] m-auto p-4 border rounded-lg bg-white overflow-scroll'>
-                    <h1 class="text-black font-bold text-3xl">Recent Post</h1>
-                        <ul>
-                            <li class='bg-gray-50 hover:bg-gray-100 rounded-lg my-3 p-2  cursor-pointer'>
-                            <a href="" class="flex items-center">
-                                <div class='bg-purple-100 rounded-lg p-3'>
-                                    <img src="img/cassava.jpg" class="w-[100px] h-full" alt="img">
-                                </div>
-                                <div class='pl-4'>
-                                    <p class='text-gray-800 font-bold'>Agric</p>
-                                    <p class='text-gray-400 text-sm'>Lorem ipsum dolor...</p>
-                                <small class="text-gray-700 flex justify-end text-sm">
-                                    2 Hour ago
-                                </small>
-                                </div>   
-                            </a>
-                            </li>
-                            <li class='bg-gray-50 hover:bg-gray-100 rounded-lg my-3 p-2  cursor-pointer'>
-                                <a href="" class="flex items-center">
-                                    <div class='bg-purple-100 rounded-lg p-3'>
-                                        <img src="img/crop1.jfif" class="w-[100px] h-full" alt="img">
-                                    </div>
-                                    <div class='pl-4'>
-                                        <p class='text-gray-800 font-bold'>Agric</p>
-                                        <p class='text-gray-400 text-sm'>Lorem ipsum dolor...</p>
-                                    <small class="text-gray-700 flex justify-end text-sm">
-                                        2 Hour ago
-                                    </small>
-                                    </div>   
-                                </a>
-                                </li>
-                                <li class='bg-gray-50 hover:bg-gray-100 rounded-lg my-3 p-2  cursor-pointer'>
-                                    <a href="" class="flex items-center">
-                                        <div class='bg-purple-100 rounded-lg p-3'>
-                                            <img src="img/tomato_1.jpg" class="w-[100px] h-full" alt="img">
-                                        </div>
-                                        <div class='pl-4'>
-                                            <p class='text-gray-800 font-bold'>Agric</p>
-                                            <p class='text-gray-400 text-sm'>Lorem ipsum dolor...</p>
-                                        <small class="text-gray-700 flex justify-end text-sm">
-                                            2 Hour ago
-                                        </small>
-                                        </div>   
-                                    </a>
-                                    </li>
-                                    <li class='bg-gray-50 hover:bg-gray-100 rounded-lg my-3 p-2  cursor-pointer'>
-                                        <a href="" class="flex items-center">
-                                            <div class='bg-purple-100 rounded-lg p-3'>
-                                                <img src="img/goat.jpg" class="w-[100px] h-full" alt="img">
-                                            </div>
-                                            <div class='pl-4'>
-                                                <p class='text-gray-800 font-bold'>Goat</p>
-                                                <p class='text-gray-400 text-sm'>Lorem ipsum dolor...</p>
-                                            <small class="text-gray-700 flex justify-end text-sm">
-                                                2 Hour ago
-                                            </small>
-                                            </div>   
-                                        </a>
-                                        </li>
-                                        <li class='bg-gray-50 hover:bg-gray-100 rounded-lg my-3 p-2  cursor-pointer'>
-                                            <a href="" class="flex items-center">
-                                                <div class='bg-purple-100 rounded-lg p-3'>
-                                                    <img src="img/gnut.jpg" class="w-[100px] h-full" alt="img">
-                                                </div>
-                                                <div class='pl-4'>
-                                                    <p class='text-gray-800 font-bold'>Agric</p>
-                                                    <p class='text-gray-400 text-sm'>Lorem ipsum dolor...</p>
-                                                <small class="text-gray-700 flex justify-end text-sm">
-                                                    2 Hour ago
-                                                </small>
-                                                </div>   
-                                            </a>
-                                            </li>
-                                            <li class='bg-gray-50 hover:bg-gray-100 rounded-lg my-3 p-2  cursor-pointer'>
-                                                <a href="" class="flex items-center">
-                                                    <div class='bg-purple-100 rounded-lg p-3'>
-                                                        <img src="img/crop5.jfif" class="w-[100px] h-full" alt="img">
-                                                    </div>
-                                                    <div class='pl-4'>
-                                                        <p class='text-gray-800 font-bold'>Agric</p>
-                                                        <p class='text-gray-400 text-sm'>Lorem ipsum dolor...</p>
-                                                    <small class="text-gray-700 flex justify-end text-sm">
-                                                        2 Hour ago
-                                                    </small>
-                                                    </div>   
-                                                </a>
-                                                </li>
-                                                <li class='bg-gray-50 hover:bg-gray-100 rounded-lg my-3 p-2  cursor-pointer'>
-                                                    <a href="" class="flex items-center">
-                                                        <div class='bg-purple-100 rounded-lg p-3'>
-                                                            <img src="img/yam.jpg" class="w-[100px] h-full" alt="img">
-                                                        </div>
-                                                        <div class='pl-4'>
-                                                            <p class='text-gray-800 font-bold'>Agric</p>
-                                                            <p class='text-gray-400 text-sm'>Lorem ipsum dolor...</p>
-                                                        <small class="text-gray-700 flex justify-end text-sm">
-                                                            2 Hour ago
-                                                        </small>
-                                                        </div>   
-                                                    </a>
-                                                    </li>
-                            </ul>
-                    </div>
-                </div>
+        <div class="grid lg:grid-cols-3 grid-cols-1 gap-6">
+    <div class="col-span-2">
+        <div class="carousel-container">
+            <div class="carousel-slide">
+                <img src="img/guine_corn.jpg" class="w-full rounded-lg h-full" alt="Slide 1">
             </div>
-            
+            <div class="carousel-slide">
+                <img src="img/pig.jpg" class="w-full h-full rounded-lg" alt="Slide 2">
+            </div>
+            <div class="carousel-slide">
+                <img src="img/maize.jpg" class="w-full h-full rounded-lg" alt="Slide 3">
+            </div>
         </div>
+    </div>
+    <div class="col-span-1">    
+    <div class='w-full col-span-1 relative lg:h-[75vh] h-[50vh] m-auto p-4 border rounded-lg bg-white overflow-scroll'>
+        <h1 class="text-black font-bold text-3xl">Recent Post</h1>
+<ul>
+    <li class='bg-gray-50 hover:bg-gray-100 rounded-lg my-3 p-2  cursor-pointer'>
+    <a href="" class="flex items-center">
+    <div class='bg-purple-100 rounded-lg p-3'>
+    <img src="img/cassava.jpg" class="w-[100px] h-full" alt="img">
+    </div>
+    <div class='pl-4'>
+    <p class='text-gray-800 font-bold'>Agric</p>
+    <p class='text-gray-400 text-sm'>Lorem ipsum dolor...</p>
+    <small class="text-gray-700 flex justify-end text-sm">
+    2 Hour ago
+    </small>
+    </div>   
+    </a>
+    </li>
+    <li class='bg-gray-50 hover:bg-gray-100 rounded-lg my-3 p-2  cursor-pointer'>
+    <a href="" class="flex items-center">
+    <div class='bg-purple-100 rounded-lg p-3'>
+        <img src="img/crop1.jfif" class="w-[100px] h-full" alt="img">
+    </div>
+    <div class='pl-4'>
+        <p class='text-gray-800 font-bold'>Agric</p>
+        <p class='text-gray-400 text-sm'>Lorem ipsum dolor...</p>
+    <small class="text-gray-700 flex justify-end text-sm">
+        2 Hour ago
+    </small>
+    </div>   
+    </a>
+    </li>
+    <li class='bg-gray-50 hover:bg-gray-100 rounded-lg my-3 p-2  cursor-pointer'>
+    <a href="" class="flex items-center">
+        <div class='bg-purple-100 rounded-lg p-3'>
+            <img src="img/tomato_1.jpg" class="w-[100px] h-full" alt="img">
         </div>
+        <div class='pl-4'>
+            <p class='text-gray-800 font-bold'>Agric</p>
+            <p class='text-gray-400 text-sm'>Lorem ipsum dolor...</p>
+        <small class="text-gray-700 flex justify-end text-sm">
+            2 Hour ago
+        </small>
+        </div>   
+    </a>
+    </li>
+    <li class='bg-gray-50 hover:bg-gray-100 rounded-lg my-3 p-2  cursor-pointer'>
+        <a href="" class="flex items-center">
+            <div class='bg-purple-100 rounded-lg p-3'>
+            <img src="img/goat.jpg" class="w-[100px] h-full" alt="img">
         </div>
+        <div class='pl-4'>
+            <p class='text-gray-800 font-bold'>Goat</p>
+            <p class='text-gray-400 text-sm'>Lorem ipsum dolor...</p>
+        <small class="text-gray-700 flex justify-end text-sm">
+            2 Hour ago
+        </small>
+        </div>   
+    </a>
+    </li>
+    <li class='bg-gray-50 hover:bg-gray-100 rounded-lg my-3 p-2  cursor-pointer'>
+        <a href="" class="flex items-center">
+            <div class='bg-purple-100 rounded-lg p-3'>
+                <img src="img/gnut.jpg" class="w-[100px] h-full" alt="img">
+            </div>
+            <div class='pl-4'>
+                <p class='text-gray-800 font-bold'>Agric</p>
+                <p class='text-gray-400 text-sm'>Lorem ipsum dolor...</p>
+            <small class="text-gray-700 flex justify-end text-sm">
+                2 Hour ago
+            </small>
+            </div>   
+        </a>
+    </li>
+    <li class='bg-gray-50 hover:bg-gray-100 rounded-lg my-3 p-2  cursor-pointer'>
+        <a href="" class="flex items-center">
+            <div class='bg-purple-100 rounded-lg p-3'>
+                <img src="img/crop5.jfif" class="w-[100px] h-full" alt="img">
+            </div>
+            <div class='pl-4'>
+                <p class='text-gray-800 font-bold'>Agric</p>
+                <p class='text-gray-400 text-sm'>Lorem ipsum dolor...</p>
+            <small class="text-gray-700 flex justify-end text-sm">
+                2 Hour ago
+            </small>
+            </div>   
+        </a>
+    </li>
+    <li class='bg-gray-50 hover:bg-gray-100 rounded-lg my-3 p-2  cursor-pointer'>
+        <a href="" class="flex items-center">
+            <div class='bg-purple-100 rounded-lg p-3'>
+                <img src="img/yam.jpg" class="w-[100px] h-full" alt="img">
+            </div>
+            <div class='pl-4'>
+                <p class='text-gray-800 font-bold'>Agric</p>
+                <p class='text-gray-400 text-sm'>Lorem ipsum dolor...</p>
+            <small class="text-gray-700 flex justify-end text-sm">
+                2 Hour ago
+            </small>
+            </div>   
+        </a>
+    </li>
+    </ul>
+    </div>
+</div>
+</div>
+</div>
+</div>
+</div>
    </section>
    <section di="partnership" class="bg-gray-100">
     <div class="container py-20">
-       
+       partnership
     </div>  
 </section>
     <section id="contact-us" class="bg-color-primary py-5">
@@ -365,33 +364,32 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
                         <p class="text-2xl font-medium ml-2 text-yellow-500">Follow Us On</p>
                         <ul class="flex justify-between items-center">
                             <li class="inline-flex">
-                                <a href="">
-                                    <i class="fa-brands fa-facebook text-[#0866FF] text-4xl font-bold p-2"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <i class="fa-brands fa-twitter text-[#26a7de] text-4xl font-bold p-2"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <i class="fa-brands fa-instagram text-[#962fbf] text-4xl font-bold p-2"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <i class="fa-brands fa-whatsapp text-4xl text-[#25d366] font-bold p-2"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+                        <a href="">
+                            <i class="fa-brands fa-facebook text-[#0866FF] text-4xl font-bold p-2"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="fa-brands fa-twitter text-[#26a7de] text-4xl font-bold p-2"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="fa-brands fa-instagram text-[#962fbf] text-4xl font-bold p-2"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="fa-brands fa-whatsapp text-4xl text-[#25d366] font-bold p-2"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
             </div>
         </div>
     </section>
 </main>
-
    <script src="js/app.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
