--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
         </div>
         <!-- Mobile screen -->
         <div id="hamburger" class="lg:hidden cursor-pointer z-[100]">
-            <i class="fa-solid fa-bars"></i>
+            <i class="fa-solid fa-bars icon"></i>
         </div>
         <div id="menu" class="hidden bg-black h-[100vh] absolute inset-0 z-50">
             <ul class="h-full grid place-items-center py-20">
